TIKA-4884: content-enrichers follow-ons to TIKA-4872